refactor(service): 데이터 매핑에서 불필요한 null 필터 제거
- itemsList 스트림 처리에서 중복된 filter(Objects::nonNull) 제거
- mapToDto 메서드가 항상 null이 아닌 값을 반환하도록 수정하여 코드 명확성 강화